--- a/mylog.conf
+++ b/mylog.conf
@@ -1,5 +1,5 @@
     location /log {
-      proxy_pass https://gb.cs.unc.edu/log;
+      proxy_pass http://localhost:8055
       proxy_set_header Proxy '';
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
